<resources>
    <string name="app_name">Hindustan Grain Center</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="home">Home</string>
    <string name="account">My Account</string>
    <string name="orders">My Orders</string>
    <string name="cart">My Cart</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="title_activity_login">Log in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <string name="photo_permission">We need these permissions to choose photo from gallery</string>
    <string name="camera_permission">We need these permissions to open camera</string>
    <string name="pricing">Rs %1$s</string>
    <string name="welcome">Welcome %1$s</string>
    <string name="go_to_cart">go to cart</string>
    <string name="badge0">0%1$d</string>
    <string name="order_on">Ordered on: %1$s</string>
    <string name="proceed">Proceed</string>
    <string name="image">Image</string>
    <string name="text">Text</string>
    <string name="remove">Remove</string>
    <string name="choose_from_gallery">Choose from Gallery</string>
    <string name="take_photo">Take Photo</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="add_new_address">+ New Address</string>
    <string name="deliver_here">Deliver here</string>
    <string name="price_details">Price details</string>
    <string name="total_quantity">Total quantity</string>
    <string name="total_price">Total price</string>
    <string name="log_in">Log In</string>
    <string name="your_email">Your Email</string>
    <string name="your_password">Your Password</string>
    <string name="new_user">New user? Sign up here</string>
    <string name="delivery">Delivery</string>
    <string name="address">Address :</string>
    <string name="payment">Payment</string>
    <string name="order_id">Order Id:</string>
    <string name="order_status">Order Status:</string>
    <string name="ordered_on">Ordered On:</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="verify_phone">Verify Phone</string>
    <string name="your_phone">Your Phone</string>
    <string name="get_otp">Get OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="your_otp">Your OTP</string>
    <string name="cont">Continue</string>
    <string name="have_acc">Have an account? Login here</string>
    <string name="order_placed_successfully">Order Placed Successfully</string>
    <string name="payable_amount">Payable Amount</string>
    <string name="view_all">View All</string>
    <string name="register">Register</string>
    <string name="your_name">Your Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="address_line_1">Address line 1</string>
    <string name="address_line_2">Address line 2</string>
    <string name="landmark_optional">Landmark (optional)</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="pin_code">Pin Code</string>
    <string name="buy">Buy</string>
    <string name="product_description">Product description</string>
    <string name="new_phone">New phone number</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="timer">Do not press any key, %1$s</string>
    <string name="resend_otp_in">Resend OTP in %1$d</string>
    <string name="verify_email">Please verify email</string>
    <string name="verification_sent">Email sent to %1$s</string>
    <string name="payment_method">Payment Method</string>
    <string name="place_order">Place Order</string>
    <string name="submit">Submit</string>
    <string name="customer_rating">Customer\n Ratings</string>
</resources>
