<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/home_icon"
        android:title="@string/home" />

    <item
        android:id="@+id/menu_acc"
        android:icon="@drawable/acc_icon"
        android:title="@string/account" />

    <item
        android:id="@+id/menu_orders"
        android:icon="@drawable/order_icon"
        android:title="@string/orders" />

    <item
        android:id="@+id/menu_cart"
        android:icon="@drawable/cart_icon"
        android:title="@string/cart" />

    <item
        android:id="@+id/menu_help"
        android:icon="@drawable/help_icon"
        android:title="@string/help" />

    </group>

    <item
        android:id="@+id/menu_logout"
        android:icon="@drawable/logout_icon"
        android:title="@string/logout"/>

</menu>